# nsbrain

./: README.md  index.js  infer.js  init.js  messageHandler.js  package-lock.json  package.json  simple-bot.js  wikiLoader.js
attached_assets/: Pasted-Product-Requirements-Document-PRD-Product-Name-NS-Wiki-Discord-Bot-Date-March-2025-1-Overv-1741415048138.txt
data/: NS WIKI LINKS.txt  NS WIKI.txt  Network School Events.txt  people.csv
data/book/: data.csv  ingest.js
data/discord/: data.csv  ingest.js
data/luma/: data.csv  ingest.js
data/wiki/: data.csv  ingest.js
eval/: evaluator.js  index.js  llm-wrapper.js  questions.js  test.js  utils.js
eval/results/: eval-2025-03-12_22-23-38.json  eval-2025-03-15_21-31-57.json  eval-2025-03-15_21-53-04.json
python/: README.md  justfile  main.py  pyproject.toml
python/scrapers/: __init__.py  book.py  discord.py  luma.py  notion.py
scripts/: uploadDocuments.js
server/: config.ts  routes.ts  storage.ts
server/discord/: bot.ts  commands.ts
server/services/: deepseek.ts
shared/: schema.ts
utils/: llm.js  llmUtils.js  messageUtils.js  ragService.js  retryUtils.js  wikiLoader.js
utils/rag/: README.md  chunking.js  client.js  csvParser.js  index.js  retrieval.js  storage.js
