[tool.poetry]
name = "nsbrain-scraper"
version = "0.1.0"
description = "NSBrain Scraper"
authors = ["Athon Millane <athon@sadana.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
selenium = "^4.29.0"
tqdm = "^4.67.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
